[gd_scene load_steps=12 format=3 uid="uid://dvl7w7fx0tbkf"]

[ext_resource type="Script" path="res://Controller/Controller.gd" id="1_ctbtb"]
[ext_resource type="Script" path="res://Dialogs/FileButton.gd" id="2_uyn0a"]
[ext_resource type="Script" path="res://Dialogs/DataTypeButton.gd" id="3_j0vx4"]
[ext_resource type="PackedScene" uid="uid://7ctrfs5uki1m" path="res://Dialogs/unsaved_file_dialog.tscn" id="4_7sj4w"]
[ext_resource type="Script" path="res://Dialogs/SaveFileDialog.gd" id="5_1v4k6"]
[ext_resource type="Script" path="res://Dialogs/LoadFileDialog.gd" id="6_hux1b"]
[ext_resource type="Script" path="res://Dialogs/SaveBeforeQuitDialog.gd" id="7_q8gdu"]
[ext_resource type="Script" path="res://Dialogs/CreateDataTypeDialog.gd" id="8_weyex"]
[ext_resource type="Script" path="res://Dialogs/RemoveDataTypeDialog.gd" id="9_vgvbo"]
[ext_resource type="Script" path="res://Dialogs/EditDataTypeDialog.gd" id="10_kl3p6"]
[ext_resource type="Script" path="res://TreeContainer.gd" id="11_xcw1r"]

[node name="Controller" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ctbtb")

[node name="MenuContainer" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 33.0
grow_horizontal = 2

[node name="FileButton" type="MenuButton" parent="MenuContainer"]
offset_right = 35.0
offset_bottom = 31.0
text = "File"
flat = false
switch_on_hover = true
item_count = 5
popup/item_0/text = "New"
popup/item_0/id = 0
popup/item_1/text = "Save"
popup/item_1/id = 1
popup/item_2/text = "Load"
popup/item_2/id = 2
popup/item_3/text = ""
popup/item_3/id = 3
popup/item_3/separator = true
popup/item_4/text = "Close"
popup/item_4/id = 4
script = ExtResource("2_uyn0a")

[node name="DataTypeButton" type="MenuButton" parent="MenuContainer"]
offset_left = 39.0
offset_right = 133.0
offset_bottom = 31.0
text = "Data Types"
flat = false
switch_on_hover = true
item_count = 3
popup/item_0/text = "Add"
popup/item_0/id = 0
popup/item_1/text = "Remove"
popup/item_1/id = 1
popup/item_2/text = "Edit"
popup/item_2/id = 2
script = ExtResource("3_j0vx4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -33.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="AddItemBeforeBtn" type="Button" parent="HBoxContainer"]
offset_left = 640.0
offset_right = 775.0
offset_bottom = 31.0
text = "Add Item Before"

[node name="AddItemAfterBtn" type="Button" parent="HBoxContainer"]
offset_left = 779.0
offset_right = 901.0
offset_bottom = 31.0
text = "Add Item After"

[node name="AddItemBelowBtn" type="Button" parent="HBoxContainer"]
offset_left = 905.0
offset_right = 1035.0
offset_bottom = 31.0
text = "Add Item Below
"

[node name="RemoveItemBtn" type="Button" parent="HBoxContainer"]
offset_left = 1039.0
offset_right = 1150.0
offset_bottom = 31.0
text = "Remove Item
"

[node name="FileDialogs" type="Node" parent="."]

[node name="UnsavedFileDialog" parent="FileDialogs" instance=ExtResource("4_7sj4w")]

[node name="SaveFileDialog" type="FileDialog" parent="FileDialogs"]
title = "Save to File"
size = Vector2i(392, 162)
ok_button_text = "Save"
mode_overrides_title = false
access = 2
filters = PackedStringArray("*.ssv;Save Structure Visualizer File")
script = ExtResource("5_1v4k6")

[node name="LoadFileDialog" type="FileDialog" parent="FileDialogs"]
title = "Load from File"
size = Vector2i(312, 157)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.ssv;Save Structure Visualizer File")
script = ExtResource("6_hux1b")

[node name="SaveBeforeQuitDialog" type="AcceptDialog" parent="FileDialogs"]
title = "Save before quitting"
ok_button_text = "Yes"
dialog_text = "Do you want to save before quitting the app?"
script = ExtResource("7_q8gdu")

[node name="DataTypeDialogs" type="Node" parent="."]

[node name="CreateDataTypeDialog" type="AcceptDialog" parent="DataTypeDialogs"]
title = "Create New Data Type"
size = Vector2i(300, 125)
unresizable = true
always_on_top = true
popup_window = true
min_size = Vector2i(300, 100)
script = ExtResource("8_weyex")

[node name="VBoxContainer" type="VBoxContainer" parent="DataTypeDialogs/CreateDataTypeDialog"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -860.0
offset_bottom = 76.0
grow_horizontal = 2

[node name="DataType" type="LineEdit" parent="DataTypeDialogs/CreateDataTypeDialog/VBoxContainer"]
size_flags_vertical = 3
placeholder_text = "Data Type Name"
caret_blink = true
caret_blink_interval = 0.5

[node name="ByteSize" type="LineEdit" parent="DataTypeDialogs/CreateDataTypeDialog/VBoxContainer"]
size_flags_vertical = 3
placeholder_text = "Byte Size"
caret_blink = true
caret_blink_interval = 0.5

[node name="RemoveDataTypeDialog" type="AcceptDialog" parent="DataTypeDialogs"]
title = "Create New Data Type"
size = Vector2i(300, 125)
unresizable = true
always_on_top = true
popup_window = true
min_size = Vector2i(300, 20)
script = ExtResource("9_vgvbo")

[node name="DataType" type="OptionButton" parent="DataTypeDialogs/RemoveDataTypeDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 76.0

[node name="EditDataType" type="AcceptDialog" parent="DataTypeDialogs"]
title = "Create New Data Type"
size = Vector2i(300, 125)
unresizable = true
always_on_top = true
popup_window = true
min_size = Vector2i(300, 20)
script = ExtResource("10_kl3p6")

[node name="VBoxContainer" type="VBoxContainer" parent="DataTypeDialogs/EditDataType"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -860.0
offset_bottom = 76.0
grow_horizontal = 2
size_flags_vertical = 3

[node name="DataType" type="OptionButton" parent="DataTypeDialogs/EditDataType/VBoxContainer"]
size_flags_vertical = 3

[node name="ByteSize" type="LineEdit" parent="DataTypeDialogs/EditDataType/VBoxContainer"]
size_flags_vertical = 3
placeholder_text = "Byte Size"
caret_blink = true
caret_blink_interval = 0.5

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 35.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
drag_to_rearrange_enabled = true
script = ExtResource("11_xcw1r")
